frontend/src/components/Navigation/Navigation.css
.profile-dropdown {
    display: flex;
    flex-direction: column;
    height: 30px;
    line-height: 24px;
    margin: 0 0 0 6px;
    padding: 2px 16px;
    transition: opacity .2s linear;
    color: #fff;
    /* border-color: #ccc; */
    transition: opacity .2s linear;
    /* border: 1px solid #e5e5e5; */
    /* border-radius: 3px; */
    cursor: pointer;
    white-space: nowrap;
    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
    font-weight: 100;
    text-align: center;
    vertical-align: baseline;
    box-sizing: border-box;
    text-decoration: none;
    list-style-type: none;
    position: absolute;
    width: fit-content;
    height: fit-content;
    margin-top: 120px;

    justify-content: center;
    align-items: center;
    background-color: rgba(255, 85, 0, 0.359);
    right: 10%;
    border-radius: 5px;
}

.profile-dropdown button {
    height: 30px;
    line-height: 24px;
    margin: 0 0 0 6px;
    padding: 2px 16px;
    transition: opacity .2s linear;
    background-color: #f50;
    border-color: #f50;
    color: #fff;
    display: inline-block;
    position: relative;
    border: 1px solid #e5e5e5;
    border-radius: 3px;
    cursor: pointer;
    font-size: 16px;
    white-space: nowrap;
    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
    font-weight: 100;
    text-align: center;
    vertical-align: baseline;
    box-sizing: border-box;

}
html, body {
    margin: 0;
    padding: 0;
  }

@media only screen and (max-width: 1500px) {
    .backgroundcontainer img {
        position: absolute;
        width: 100%;
        height: 48%;
        }
   }

@media only screen and (min-width: 1500px) {
    .bigContainer {
        width: 1500px !important;
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 50%;
    }
    .profilecontainer {
        width: 1500px !important;
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 50%;
        left:auto !important;
    }
    .backgroundOnly {
        position:absolute;
        width: 100vw;
        left: 0;
        right: 0;
        top: 0;
        height: 45%;
        padding-bottom: 62;
        background: linear-gradient(45deg, #ED4264, #FFEDBC) border-box;
    }

    .backgroundcontainer img {
        position: absolute;
        width: 1500px !important;
        height: 48% !important;
        border-radius: 10px;

    }
    .navContainer {
        width: 1500px !important;
        display: block;
        margin-left: auto;
        margin-right: auto;
        width: 50%;
    }
    .songList {
        margin-left: 10% !important;
        margin-right: 10% !important;
    }
    .headers {
        right: 0;
        left: 0;
    }
   }


.navbar {
    height: 50%;
    /* background-image: url('./lofi-girl.webp'); */
}

/* ul.navbar {
    z-index: 1;
} */


.links {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 0px 15px;
    /* z-index: 10; */
}

.logoandtitle {
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 10;

}

.logolink {
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 10;

}


.fab {
    color: white;
}

.links li {
    display: flex;
    list-style: none;
    align-items: center;
    z-index: 10;
    /* justify-content: space-around; */
}

.fas {
    color: #f50;
    padding: 5px;
}

.navbuttonsright {
    align-content: center;
    justify-content: center;
    margin-right: 30px;
}

.soundfi {
    font: 12px/1.4 Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
    font-size: 36px;
    font-weight: 100;
    text-shadow: 0 0 3px rgb(5 5 5 / 100%);
    color: #fff;
    padding-left: 8px;
    z-index: 10;

}

.home-signin {
    height: 30px;
    line-height: 24px;
    margin: 0 0 0 6px;
    padding: 2px 16px;
    transition: opacity .2s linear;
    color: #fff;
    border-color: #ccc;
    transition: opacity .2s linear;
    border: 1px solid #e5e5e5;
    border-radius: 3px;
    cursor: pointer;
    white-space: nowrap;
    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
    font-weight: 100;
    text-align: center;
    vertical-align: baseline;
    box-sizing: border-box;
    text-decoration: none;
    list-style-type: none;
}
a, a:hover, a:focus, a:active {
    text-decoration: none;
    cursor: pointer;
}

.loginbutton {
    height: 30px;
    line-height: 24px;
    margin: 0 0 0 6px;
    padding: 2px 16px;
    transition: opacity .2s linear;
    background-color: #f50;
    border-color: #f50;
    color: #fff;
    display: inline-block;
    position: relative;
    border: 1px solid #e5e5e5;
    border-radius: 3px;
    cursor: pointer;
    font-size: 16px;
    white-space: nowrap;
    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
    font-weight: 100;
    text-align: center;
    vertical-align: baseline;
    box-sizing: border-box;

}

.loginbutton:hover {
    text-shadow: 0 1px rgba(0,0,0,0.3);
    background-color: rgb(244, 82, 1);

}

button {
	background: none;
	color: inherit;
	border: none;
	padding: 0;
	font: inherit;
	cursor: pointer;
	outline: inherit;
}

.headers {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    line-height: 30px;
    text-align: center;
    /* position: fixed; */
    top: 15%;
    width: 100%;
    /* left: 50%;
    right: 50%; */
    /* text-align: center; */
    /* max-width: 1260px; */
    /* z-index: 1; */
}

.discovertext {
    display: inline-block;

    margin-bottom: 8px;
    font-size: 36px;
    font-weight: 100;
    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
    text-shadow: 0 0 3px rgb(5 5 5 / 50%);
    text-shadow: 0 0 3px rgb(5 5 5 / 50%);
    color: #fff;
  }

.discoversmalltext {
      display: inline-block;

    margin-bottom: 8px;
    font-size: 18px;
    font-weight: 100;
    font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;
    text-shadow: 0 0 3px rgb(5 5 5 / 50%);
    text-shadow: 0 0 3px rgb(5 5 5 / 50%);
    color: #fff;
}


.socials {
    background-color: rgb(255, 85, 0);
}

